work section: typos and rewording of work history

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
       <h5 class="headline--minor">Work</h5>
       <h3 class="headline--major">Worked on projects with user bases greater than 7 million, IPOs with tens of millions on the table, and companies with gross revenue in the billions; while being humbled to have worked with dozens of small companies whom have trusted me with their digital presence. </h3>
 
-      <p>I&rsquo;ve helped create and build
-        <a href="https://participant.empower-retirement.com/participant/#/login" title="Empower, 401k Retirement plan">Empower&rsquo;s</a> user interface and accessibility updates.
-        <a href="https://www.connection.com/" title="Connection, a physical product IT company">Connection&rsquo;s</a> checkout flow with user interviews, flows and designs.
-        <a href="https://www.taskrabbit.com/" title="TaskRabbit, online marketplace for local labor">TaskRabbit&rsquo;s</a> task creation from when they were transitioning from RunMyErrands</a>.
-        The prototype form for registering new users for the <a href="https://www.goinvo.com/enterprise/dnc/" title="Involution case study on the DNC project"> Democratic National Committee</a>.
-         Developing the responsive experience for <a href="https://www.quoddy.com/">Quoddy</a> on Shopify, and a
+      <p>
+        I helped create and build <a href="https://participant.empower-retirement.com/participant/#/login" title="Empower, 401k Retirement plan">Empower&rsquo;s</a> user interface and accessibility updates.
+        I designed <a href="https://www.connection.com/" title="Connection, a physical product IT company">Connection&rsquo;s</a> checkout flow using user interviews, flows and interactive prototypes.
+        Designed and built <a href="https://www.taskrabbit.com/" title="TaskRabbit, online marketplace for local labor">TaskRabbit&rsquo;s</a> task creation form, with data from user interviews and tests, when they transitioned from RunMyErrand and prepping for San Francisco.
+        Built several prototypes for processing and registering new users for the <a href="https://www.goinvo.com/enterprise/dnc/" title="Involution case study on the DNC project"> Democratic National Committee</a>.
+         Developed the responsive experience for <a href="https://www.quoddy.com/">Quoddy</a> on Shopify, and create the 
         responsive redesign built on WordPress for <a href="https://www.centralsquaretheater.org/">Central Square Theater</a>.</p>
 
       <div class="what-mike-likes-👨‍💻">
