adjust styles for basic responsive layout to improve readability

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
   <main>
     <section class="quick-summary-🎉">
-      <div class="picture">
-        <img src="assets/images/kivikoski-headshot.jpeg" alt="Mike Kivikoski Headshot" class="headshot"/>
+      <div class="headshot">
+        <img src="assets/images/kivikoski-headshot.jpeg" alt="Mike Kivikoski Headshot" class="headshot__avatar"/>
       </div>
 
       <div class="quick-summary-🎉__content">
@@ -70,7 +70,7 @@
             I&rsquo;ve also taught at the college level, teaching, <i>Introduction to Web Design</i>, <i>Introduction to Web Development</i>, and <i>Advanced Web Development</i>, at Endicott College, my alma mater, during the 2012 &dash; 2014 semesters in Beverly, MA.
           </p>
 
-          <p>Want to chat? I&rsquo;d love to hear from you! Send me an email 📬, <a href="mailto:mikekivikoski@gmail.com" title="Email Mike">mikekivikoski@gmail.com</a> and we&rsquo;ll setup a Zoom.</p>
+          <p>Want to chat? I&rsquo;d love to hear from you! Send me an email and we&rsquo;ll setup a Zoom. <a href="mailto:mikekivikoski@gmail.com" title="Email Mike" class="link--email">mikekivikoski@gmail.com</a></p>
         </div>
       </div>
     </section>
