update css grid for summary, through several media queries for better readability at various screen sizes

--- a/index.html
+++ b/index.html
@@ -37,41 +37,39 @@
         <img src="assets/images/kivikoski-headshot.jpeg" alt="Mike Kivikoski Headshot" class="headshot__avatar"/>
       </div>
 
-      <div class="quick-summary-🎉__content">
-        <header class="quick-summary-🎉__headline">
-          <h5 class="headline--minor">
-            Background
-          </h5>
-          <h2 class="headline--major">
-            With a formal background in design, and 11 years of work experience in development, I help create and connect the dots from <b>Problem Identification</b>, <b>User Research</b>, <b>Interviews</b>, <b>Testing</b>, and <b>UX Flows</b>, through <b>Visual Design</b>, <b>UI Development</b> and <b>Code Integration</b>.
-          </h2>
+      <header class="quick-summary-🎉__headline">
+        <h5 class="headline--minor">
+          Background
+        </h5>
+        <h2 class="headline--major">
+          With a formal background in design, and 11 years of work experience in development, I help create and connect the dots from <b>Problem Identification</b>, <b>User Research</b>, <b>Interviews</b>, <b>Testing</b>, and <b>UX Flows</b>, through <b>Visual Design</b>, <b>UI Development</b> and <b>Code Integration</b>.
+        </h2>
 
-          <h2 class="headline--major">
-            I&rsquo;ve been fortunate enough to work on projects with <b>budgets in the seven figures</b>, <b>speak at conferences</b> around the States, and have had my work shipped to literally <b>millions of users</b>.🚢
-          </h2>
-        </header>
+        <h2 class="headline--major">
+          I&rsquo;ve been fortunate enough to work on projects with <b>budgets in the seven figures</b>, <b>speak at conferences</b> around the States, and have had my work shipped to literally <b>millions of users</b>.
+        </h2>
+      </header>
 
-        <div>
-          <p>
-            I am currently a Senior Designer at <a href="https://cantina.co/" title="Cantina, a digital consulting agency in Boston">Cantina</a>, a digital consulting agency in Boston, MA; but I live in New Hampshire and work remotely. Slack, Zoom, and Gmail are everyday tools, along with gifs, puns and emojis. 🤗  I&rsquo;ve got private office space in our house and use a Jarvis standing desk daily, paired with a 27" monitor and Baron, the 8 year old Great Dane.
-          </p>
+      <div class="quick-summary-🎉__content--first">
+        <p>
+          I am currently a Senior Designer at <a href="https://cantina.co/" title="Cantina, a digital consulting agency in Boston">Cantina</a>, a digital consulting agency in Boston, MA; but I live in New Hampshire and work remotely. Slack, Zoom, and Gmail are everyday tools, along with gifs, puns and emojis. 🤗  I&rsquo;ve got private office space in our house and use a Jarvis standing desk daily, paired with a 27" monitor and Baron, the 8 year old Great Dane.
+        </p>
 
-          <p>
-             Prior to Cantina, I spent 5 years running my own consulting studio, Atedrake, out of a collective workspace in Somerville, MA. Projects ranged from UX and Visual Design, to static UI, WordPress and Shopify development. Clients consisted of small local businesses, and larger agencies needing assistance with their clients.
-          </p>
-        </div>
+        <p>
+           Prior to Cantina, I spent 5 years running my own consulting studio, Atedrake, out of a collective workspace in Somerville, MA. Projects ranged from UX and Visual Design, to static UI, WordPress and Shopify development. Clients consisted of small local businesses, and larger agencies needing assistance with their clients.
+        </p>
+      </div>
 
-        <div>
-          <p>
-            At the end of 2014, I had the opportunity to create an instructional video with O&rsquo;Reilly Media, &ldquo;<a href="http://shop.oreilly.com/product/0636920035251.do" title="">UI Development for Engineers</a>&rdquo;, that gives an introduction and overview to design and front-end development to developers unfamiliar with those concepts.
-          </p>
+      <div class="quick-summary-🎉__content--last">
+        <p>
+          At the end of 2014, I had the opportunity to create an instructional video with O&rsquo;Reilly Media, &ldquo;<a href="http://shop.oreilly.com/product/0636920035251.do" title="">UI Development for Engineers</a>&rdquo;, that gives an introduction and overview to design and front-end development to developers unfamiliar with those concepts.
+        </p>
 
-          <p>
-            I&rsquo;ve also taught at the college level, teaching, <i>Introduction to Web Design</i>, <i>Introduction to Web Development</i>, and <i>Advanced Web Development</i>, at Endicott College, my alma mater, during the 2012 &dash; 2014 semesters in Beverly, MA.
-          </p>
+        <p>
+          I&rsquo;ve also taught at the college level, teaching, <i>Introduction to Web Design</i>, <i>Introduction to Web Development</i>, and <i>Advanced Web Development</i>, at Endicott College, my alma mater, during the 2012 &dash; 2014 semesters in Beverly, MA.
+        </p>
 
-          <p>Want to chat? I&rsquo;d love to hear from you! Send me an email and we&rsquo;ll setup a Zoom. <a href="mailto:mikekivikoski@gmail.com" title="Email Mike" class="link--email">mikekivikoski@gmail.com</a></p>
-        </div>
+        <p>Want to chat? I&rsquo;d love to hear from you! Send me an email and we&rsquo;ll setup a Zoom. <a href="mailto:mikekivikoski@gmail.com" title="Email Mike" class="link--email">mikekivikoski@gmail.com</a></p>
       </div>
     </section>
 
