update the 'hi i'm mike' section and remove the emoji hand

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
   <header class="who-are-you-🐛">
 
     <h6 class="who-are-you-🐛__say-hi">
-       👋 Hi, I&rsquo;m
+      <span class="who-are-you-🐛__introduction">
+       Hi, I&rsquo;m
+     </span>
       <span class="who-are-you-🐛__your-name-please">
-         Mike Kivikoski!
+         Mike Kivikoski.
       </span>
     </h6>
 
