--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Mike Kivikoski is a Product Design and Developer working on accessible, responsive websites and applications.">
 
-  <title>Mike Kivikoski</title>
+  <title>Mike Kivikoski - Product Designer and Developer</title>
 
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,600" rel="stylesheet">
