fix typos in work section

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
       <p>
         I helped create and build <a href="https://participant.empower-retirement.com/participant/#/login" title="Empower, 401k Retirement plan">Empower&rsquo;s</a> user interface and accessibility updates.
         I designed <a href="https://www.connection.com/" title="Connection, a physical product IT company">Connection&rsquo;s</a> checkout flow using user interviews, flows and interactive prototypes.
-        I designed and built <a href="https://www.taskrabbit.com/" title="TaskRabbit, an online marketplace for local labor">TaskRabbit&rsquo;s</a> task creation form, with data from user interviews and tests, when they transitioned from RunMyErrand and prepping for San Francisco.
+        I designed and built <a href="https://www.taskrabbit.com/" title="TaskRabbit, an online marketplace for local labor">TaskRabbit&rsquo;s</a> task creation form, with data from user interviews and tests, when they transitioned from RunMyErrand and were prepping for San Francisco.
         I built several high-fidelity prototypes for processing and registering new users for the <a href="https://www.goinvo.com/enterprise/dnc/" title="Involution Studios case study on the DNC project"> Democratic National Committee</a>.
-        I developed the responsive experience for <a href="https://www.quoddy.com/" title="Quoddy, a custom shoemaker in Maine">Quoddy</a> on Shopify, and create the
+        I developed the responsive experience for <a href="https://www.quoddy.com/" title="Quoddy, a custom shoemaker in Maine">Quoddy</a> on Shopify, and created the
         responsive redesign built on WordPress for <a href="https://www.centralsquaretheater.org/" title="CST is a small theater located in Cambridge, MA">Central Square Theater</a>.</p>
 
       <div class="what-mike-likes-👨‍💻">
