remove Baron the Great Dane (RIP), add Cheeseburger, add note about portofolio available on request

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="quick-summary-🎉__content--first">
         <p>
-          I am currently a Senior Designer at <a href="https://cantina.co/" title="Cantina, a digital consulting agency in Boston">Cantina</a>, a digital consulting agency in Boston, MA; but I live in New Hampshire and work remotely. Slack, Zoom, and Gmail are everyday tools, along with gifs, puns and emojis. 🤗  I&rsquo;ve got private office space in our house and use a Jarvis standing desk daily, paired with a 27" monitor and Baron, the 8 year old Great Dane.
+          I am currently a Senior Designer at <a href="https://cantina.co/" title="Cantina, a digital consulting agency in Boston">Cantina</a>, a digital consulting agency in Boston, MA; but I live in New Hampshire and work remotely. Slack, Zoom, and Gmail are everyday tools, along with gifs, puns and emojis. 🤗  I&rsquo;ve got private office space in our house and use a Jarvis standing desk daily, paired with a 27" monitor and Cheeseburger, the 2 year old Great Dane/Lab mix.
         </p>
 
         <p>
@@ -90,6 +90,8 @@
         I developed the responsive experience for <a href="https://www.quoddy.com/" title="Quoddy, a custom shoemaker in Maine">Quoddy</a> on Shopify, and created the
         responsive redesign built on WordPress for <a href="https://www.centralsquaretheater.org/" title="CST is a small theater located in Cambridge, MA">Central Square Theater</a>.</p>
 
+      <h4>Due to the nature of my consulting work, I&rsquo;m not able to post a lot of work publicly.<br />A portfolio is available upon request.</h4>
+
       <div class="what-mike-likes-👨‍💻">
         <div class="what-mike-likes-👨‍💻__example what-mike-likes-👨‍💻__example--is-good-at">
           <h4 class="what-mike-likes-👨‍💻__headline">
@@ -110,6 +112,7 @@
           </ul>
         </div>
       </div>
+
 
       <div class="notification-📬">
         <p>While I work in the front-end/user interface of products, I have experience working within applications written in various languages and frameworks. Including, in no particular order: JavaScript, Node, Angular, Python, PHP, WordPress, Shopify, and Ruby on Rails.</p>
@@ -222,7 +225,6 @@
         <li><a href="mailto:mikekivikoski@gmail.com" title="Get in touch with Mike to chat">Email &mdash; mikekivikoski@gmail.com</a></li>
       </ul>
 
-      <p>I used to own mikekivikoski.com, but let it lapse and it got scooped up by some random company 🤦‍♂️. Thus, mkivikoski.com</p>
 
       <p><a href="https://github.com/mkivikoski/mkivikoski" title="View this website's git repo">Issues and PRs welcome, or just look at the history of the site and it&rsquo;s design process.</a></p>
     </footer>
