layout: add max-width to content for larger screens to improve content readability

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <p>My second child  was born in early 2016, and time outside of work has been used for family time. This is why you&rsquo;ll notice a decrease in my writing and speaking content since then. 👨‍👩‍👦‍👦 </p>
     </section>
 
-    <footer>
+    <footer class="footer">
       <h3>Get in touch</h3>
       <ul>
         <li><a href="https://twitter.com/mkivikoski" title="Follow Mike on twitter">Twitter &mdash; @mkivikoski</a></li>
