--- a/index.html
+++ b/index.html
@@ -12,76 +12,85 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,600" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="./assets/css/tailwind-output.css">
+
+  <!-- <link rel="stylesheet" href="https://tailwindcss.com/assets/build/css/main.css?id=e994f5f9525b4219e81f"> -->
   <link rel="icon" href="ted-excellent.gif">
 </head>
 
-<body class="kivikoski-says-hello-👋">
 
-  <header class="who-are-you-🐛"><!--github pages//-->
+<body>
 
-    <h6 class="who-are-you-🐛__say-hi">
-      <span class="who-are-you-🐛__introduction">
-       Hi, I&rsquo;m
-     </span>
-      <span class="who-are-you-🐛__your-name-please">
-         Mike Kivikoski.
-      </span>
-    </h6>
+<div class="container mx-auto px-4">
 
-    <h1 class="headline--main">
-      <span class="headline--main-sub">A Product Designer and Developer</span>
-      focusing on easy to use, device agnostic, and accessible experiences.
-    </h1>
+  <header class="flex flex-col sm:flex-row items-center justify-between py-6 relative">
+    <h3 class="text-2xl font-bold uppercase text-blue-900">Mike Kivikoski</h3>
   </header>
 
-  <main>
-    <section class="quick-summary-🎉">
-      <div class="headshot">
-        <img src="assets/images/kivikoski-headshot.jpeg" alt="Mike Kivikoski Headshot" class="headshot__avatar"/>
-      </div>
+  <div class="flex mb-4">
+    <div class="w-full bg-gray-500 ">
+      Hi, I&rsquo;m Mike Kivikoski.
+    </div>
+  </div>
 
-      <header class="quick-summary-🎉__headline">
-        <h5 class="headline--minor">
-          Background
-        </h5>
-        <h2 class="headline--major">
-          With a formal background in design, and 11 years of work experience in development, I help create and connect the dots from <b>Problem Identification</b>, <b>User Research</b>, <b>Interviews</b>, <b>Testing</b>, and <b>UX Flows</b>, through <b>Visual Design</b>, <b>UI Development</b> and <b>Code Integration</b>.
-        </h2>
+  <div class="flex mb-4">
+    <div class="w-3/4 bg-gray-500 ">
+      A Product Designer and Developer
+      focusing on easy to use, device agnostic, and accessible experiences.
+    </div>
+    <div class="w-1/4 bg-gray-400 "></div>
+  </div>
 
-        <h2 class="headline--major">
-          I&rsquo;ve been fortunate enough to work on projects with <b>budgets in the seven figures</b>, <b>speak at conferences</b> around the States, and have had my work shipped to literally <b>millions of users</b>.
-        </h2>
-      </header>
+  <div class="flex mb-4">
+    <div class="w-1/4 bg-gray-400 ">
+      <img src="assets/images/kivikoski-headshot.jpeg" alt="Mike Kivikoski Headshot" class="headshot__avatar"/>
+    </div>
+    <div class="w-3/4 bg-gray-500 ">
+      <h5>
+        Background
+      </h5>
+      <h2>
+        With a formal background in design, and 11 years of work experience in development, I help create and connect the dots from <b>Problem Identification</b>, <b>User Research</b>, <b>Interviews</b>, <b>Testing</b>, and <b>UX Flows</b>, through <b>Visual Design</b>, <b>UI Development</b> and <b>Code Integration</b>.
+      </h2>
 
-      <div class="quick-summary-🎉__content--first">
-        <p>
-          I am currently a Senior Designer at <a href="https://cantina.co/" title="Cantina, a digital consulting agency in Boston">Cantina</a>, a digital consulting agency in Boston, MA; but I live in New Hampshire and work remotely. Slack, Zoom, and Gmail are everyday tools, along with gifs, puns and emojis. 🤗  I&rsquo;ve got private office space in our house and use a Jarvis standing desk daily, paired with a 27" monitor and Cheeseburger, the 2 year old Great Dane/Lab mix.
-        </p>
+      <h2>
+        I&rsquo;ve been fortunate enough to work on projects with <b>budgets in the seven figures</b>, <b>speak at conferences</b> around the States, and have had my work shipped to literally <b>millions of users</b>.
+      </h2>
+    </div>
+  </div>
 
-        <p>
-           Prior to Cantina, I spent 5 years running my own consulting studio, Atedrake, out of a collective workspace in Somerville, MA. Projects ranged from UX and Visual Design, to static UI, WordPress and Shopify development. Clients consisted of small local businesses, and larger agencies needing assistance with their clients.
-        </p>
-      </div>
+  <div class="flex mb-4">
+    <div class="w-1/2 bg-gray-400 ">
+      <p>
+        I am currently a Senior Designer at <a href="https://cantina.co/" title="Cantina, a digital consulting agency in Boston">Cantina</a>, a digital consulting agency in Boston, MA; but I live in New Hampshire and work remotely. Slack, Zoom, and Gmail are everyday tools, along with gifs, puns and emojis. 🤗  I&rsquo;ve got private office space in our house and use a Jarvis standing desk daily, paired with a 27" monitor and Cheeseburger, the 2 year old Great Dane/Lab mix.
+      </p>
 
-      <div class="quick-summary-🎉__content--last">
-        <p>
-          At the end of 2014, I had the opportunity to create an instructional video with O&rsquo;Reilly Media, &ldquo;<a href="http://shop.oreilly.com/product/0636920035251.do" title="View the video order page at shop.oreilly.com">UI Development for Engineers</a>&rdquo;, that gives an introduction and overview to design and front-end development to developers unfamiliar with those concepts.
-        </p>
+      <p>
+         Prior to Cantina, I spent 5 years running my own consulting studio, Atedrake, out of a collective workspace in Somerville, MA. Projects ranged from UX and Visual Design, to static UI, WordPress and Shopify development. Clients consisted of small local businesses, and larger agencies needing assistance with their clients.
+      </p>
+    </div>
+    <div class="w-1/2 bg-gray-500 ">
+      <p>
+        At the end of 2014, I had the opportunity to create an instructional video with O&rsquo;Reilly Media, &ldquo;<a href="http://shop.oreilly.com/product/0636920035251.do" title="View the video order page at shop.oreilly.com">UI Development for Engineers</a>&rdquo;, that gives an introduction and overview to design and front-end development to developers unfamiliar with those concepts.
+      </p>
 
-        <p>
-          I&rsquo;ve also taught at the college level, teaching, <i>Introduction to Web Design</i>, <i>Introduction to Web Development</i>, and <i>Advanced Web Development</i>, at Endicott College, my alma mater, during the 2012 &dash; 2014 semesters in Beverly, MA.
-        </p>
+      <p>
+        I&rsquo;ve also taught at the college level, teaching, <i>Introduction to Web Design</i>, <i>Introduction to Web Development</i>, and <i>Advanced Web Development</i>, at Endicott College, my alma mater, during the 2012 &dash; 2014 semesters in Beverly, MA.
+      </p>
 
-        <p>Want to chat? I&rsquo;d love to hear from you! Send me an email and we&rsquo;ll setup a Zoom. <a href="mailto:mikekivikoski@gmail.com" title="Email Mike" class="link--email">mikekivikoski@gmail.com</a></p>
-      </div>
-    </section>
+      <p>Want to chat? I&rsquo;d love to hear from you! Send me an email and we&rsquo;ll setup a Zoom. <a href="mailto:mikekivikoski@gmail.com" title="Email Mike" class="link--email">mikekivikoski@gmail.com</a></p>
+    </div>
+  </div>
 
+  <div class="flex mb-4">
+    <div class="w-3/4 bg-gray-500 ">
+      I&rsquo;ve worked on projects with user bases greater than 7 million, IPOs with tens of millions on the table, and companies with gross revenue in the billions; while being humbled to have worked with dozens of small companies that have trusted me with their digital presence.
+    </div>
+    <div class="w-1/4 bg-gray-400 "></div>
+  </div>
 
-
-    <section class="work-💻">
-      <h5 class="headline--minor">Work</h5>
-      <h3 class="headline--major">I&rsquo;ve worked on projects with user bases greater than 7 million, IPOs with tens of millions on the table, and companies with gross revenue in the billions; while being humbled to have worked with dozens of small companies that have trusted me with their digital presence. </h3>
-
+  <div class="flex mb-4">
+    <div class="w-3/4 bg-gray-500 ">
       <p>
         I helped create and build <a href="https://participant.empower-retirement.com/participant/#/login" title="Empower, 401k Retirement plan">Empower&rsquo;s</a> user interface and accessibility updates.
         I designed <a href="https://www.connection.com/" title="Connection, a physical product IT company">Connection&rsquo;s</a> checkout flow using user interviews, flows and interactive prototypes.
@@ -91,95 +100,90 @@
         responsive redesign built on WordPress for <a href="https://www.centralsquaretheater.org/" title="CST is a small theater located in Cambridge, MA">Central Square Theater</a>.</p>
 
       <h4>Due to the nature of my consulting work, I&rsquo;m not able to post a lot of work publicly.<br />A portfolio is available upon request.</h4>
+    </div>
+    <div class="w-1/4 bg-gray-400 ">
+      <ul>
+        <li>User and Project Research</li>
+        <li>User Interviews</li>
+        <li>User Flows</li>
+        <li>Design Sprints</li>
+        <li>Visual Design</li>
+        <li>Design Systems</li>
+        <li>HTML, CSS / Sass</li>
+        <li>CSS Architecture</li>
+        <li>Accessibility</li>
+        <li>Performance</li>
+        <li>Typography</li>
+      </ul>
+    </div>
+  </div>
 
-      <div class="what-mike-likes-👨‍💻">
-        <div class="what-mike-likes-👨‍💻__example what-mike-likes-👨‍💻__example--is-good-at">
-          <h4 class="what-mike-likes-👨‍💻__headline">
-            Areas I work in
-          </h4>
-          <ul class="what-mike-likes-👨‍💻__list">
-            <li class="what-mike-likes-👨‍💻__item">User and Project Research</li>
-            <li class="what-mike-likes-👨‍💻__item">User Interviews</li>
-            <li class="what-mike-likes-👨‍💻__item">User Flows</li>
-            <li class="what-mike-likes-👨‍💻__item">Design Sprints</li>
-            <li class="what-mike-likes-👨‍💻__item">Visual Design</li>
-            <li class="what-mike-likes-👨‍💻__item">Design Systems</li>
-            <li class="what-mike-likes-👨‍💻__item">HTML, CSS / Sass</li>
-            <li class="what-mike-likes-👨‍💻__item">CSS Architecture</li>
-            <li class="what-mike-likes-👨‍💻__item">Accessibility</li>
-            <li class="what-mike-likes-👨‍💻__item">Performance</li>
-            <li class="what-mike-likes-👨‍💻__item">Typography</li>
-          </ul>
-        </div>
-      </div>
+  <div class="flex mb-4">
+    <div class="w-full bg-gray-500 ">
+      <p>While I work in the front-end/user interface of products, I have experience working within applications written in various languages and frameworks. Including, in no particular order: JavaScript, Node, Angular, Python, PHP, WordPress, Shopify, and Ruby on Rails.</p>
+    </div>
+  </div>
 
 
-      <div class="notification-📬">
-        <p>While I work in the front-end/user interface of products, I have experience working within applications written in various languages and frameworks. Including, in no particular order: JavaScript, Node, Angular, Python, PHP, WordPress, Shopify, and Ruby on Rails.</p>
-      </div>
-
-    </section>
-
-    <section class="mike-talks-🎤">
+  <div class="flex mb-4">
+    <div class="w-full bg-gray-500 ">
       <h3>Selected talks, workshops, podcasts and media</h3>
-      <ul class="mike-talks-🎤__list">
+      <ul>
 
-        <li class="mike-talks-🎤__talk">
+        <li>
           <h5 class="headline--minor">Cantina Workshop &mdash; Boston, MA, August 2017</h5>
           <a href="https://www.youtube.com/watch?v=Sm_60YPrPzk" title="A workshop from Cantina" class="headline--major">Legitimizing Design Thinking in Large Organizations</a>
         </li>
-        <li class="mike-talks-🎤__talk">
+        <li>
           <h5 class="headline--minor">CascadiaJS &mdash; Seattle, WA, August 2016</h5>
           <a href="https://www.youtube.com/watch?v=IMJ3fw4JqPI" title="My talk in front of 300+ great people" class="headline--major">CSS Pseudo</a> (<a href="https://speakerdeck.com/mkivikoski/css-pseudo" title="View the slides on speakerdeck.com for CSS Pseudo">Slides</a>)
         </li>
-        <li class="mike-talks-🎤__talk">
+        <li>
           <h5 class="headline--minor">BostonCSS &mdash; Boston, MA, June 2016</h5>
           <a href="https://www.youtube.com/watch?v=rPDJcQGrKIg" title="The local meetup version of the talk" class="headline--major">CSS Pseudo</a>
         </li>
-        <li class="mike-talks-🎤__talk">
+        <li>
           <h5 class="headline--minor">NYC Creative Tech Week &mdash; New York City, May 2016</h5>
           <span class="headline--major">Evolving Web Applications with Module Components</span>
         </li>
-        <li class="mike-talks-🎤__talk">
+        <li>
           <h5 class="headline--minor">Great Wide Open &mdash; Atlanta, GA, March 2016</h5>
           <span class="headline--major">Evolving Web Applications with Module Components</span>
         </li>
-        <li class="mike-talks-🎤__talk">
+        <li>
           <h5 class="headline--minor">Full Stack Toronto &mdash; Toronto, ON, Canada, November 2015</h5>
           <a href="https://www.youtube.com/watch?v=ev3AtyAlwIQ" title="Watch the video" class="headline--major"> Evolving Web Applications with Module Components</a>
         </li>
-        <li class="mike-talks-🎤__talk">
+        <li>
           <h5 class="headline--minor">HTML5 Developer Conference &mdash; San Francisco, October 2015</h5>
           <span class="headline--major">Evolving Web Applications with Module Components</span>
         </li>
-        <li class="mike-talks-🎤__talk">
+        <li>
           <h5 class="headline--minor">Full Stack NH &mdash; Portsmouth, NH, June 2015</h5>
           <span class="headline--major">Design in the browser</span>
         </li>
-        <li class="mike-talks-🎤__talk">
+        <li>
           <h5 class="headline--minor">O&rsquo;Reilly media &mdash; October, 2014</h5>
           <a href="http://shop.oreilly.com/product/0636920035251.do" title="Visit shop.oreilly.com to purchase" class="headline--major">UI Introduction for Engineers</a>
         </li>
-        <li class="mike-talks-🎤__talk">
+        <li>
           <h5 class="headline--minor">Creative Mornings &mdash; Boston, MA, March 2012</h5>
           <a href="https://vimeo.com/41222601" title="Recording of the talk (sorry for audio quality)" class="headline--major">Taking the plunge, quit your job for self employment</a>
         </li>
-        <li class="mike-talks-🎤__talk">
+        <li>
           <h5 class="headline--minor">Boston Ignite &mdash; Boston, MA, April 2012</h5>
           <a href="https://www.youtube.com/watch?v=VHs7n4xFO4w" title="The quick 5 minute lighting talk" class="headline--major">Taking the plunge, quit your job for self employment</a>
         </li>
       </ul>
-
-      <div class="notification-📬">
-        <p>I occasionally post podcasts for Design, Build, Test, Repeat at <a href="http://dbtr.fm" title="Listen to the Design, Build, Test, Repeat podcast">dbtr.fm</a></p>
-      </div>
-    </section>
+    </div>
+  </div>
 
 
-    <section class="articles-✏️">
+  <div class="flex mb-4">
+    <div class="w-full bg-gray-500 ">
       <h3>Articles and thoughts</h3>
       <ul>
-        <li class="articles-✏️__categories">
+        <li>
           <h5 class="headline--minor">Design</h5>
           <ul>
             <li><a href="https://cantina.co/design-first-thinking-in-large-organizations/" title="Read the post at cantina.co" class="headline--major">Design First Thinking in Large Organizations</a></li>
@@ -190,7 +194,7 @@
             <li><a href="https://medium.com/@mikekivikoski/spend-1-save-99-3ecc3703f6e2" title="Read the post on Medium" class="headline--major">Spend $1, Save $99</a></li>
           </ul>
         </li>
-        <li class="articles-✏️__categories">
+        <li>
           <h5 class="headline--minor">Development</h5>
           <ul>
             <li><a href="https://cantina.co/modular-css-atomic-design-in-the-enterprise/" title="Read the post at cantina.co" class="headline--major">Modular CSS: Atomic Design in the Enterprise</a></li>
@@ -200,7 +204,7 @@
           </ul>
         </li>
 
-        <li class="articles-✏️__categories">
+        <li>
           <h5 class="headline--minor">Misc.</h5>
           <ul>
             <li><a href="https://medium.com/@mikekivikoski/failure-30e09cc3f357" title="Read the post on Medium" class="headline--major">Failure</a></li>
@@ -209,13 +213,14 @@
           </ul>
         </li>
       </ul>
-    </section>
+    </div>
+  </div>
 
-    <section class="notification-📬">
+
+  <div class="flex mb-4">
+    <div class="w-full bg-gray-500 ">
       <p>My second child  was born in early 2016, and time outside of work has been used for family time. This is why you&rsquo;ll notice a decrease in my writing and speaking content since then. 👨‍👩‍👦‍👦 </p>
-    </section>
 
-    <footer class="footer">
       <h3>Get in touch</h3>
       <ul>
         <li><a href="https://twitter.com/mkivikoski" title="Follow Mike on twitter">Twitter &mdash; @mkivikoski</a></li>
@@ -225,10 +230,12 @@
         <li><a href="mailto:mikekivikoski@gmail.com" title="Get in touch with Mike to chat">Email &mdash; mikekivikoski@gmail.com</a></li>
       </ul>
 
-
       <p><a href="https://github.com/mkivikoski/mkivikoski" title="View this website's git repo">Issues and PRs welcome, or just look at the history of the site and it&rsquo;s design process.</a></p>
-    </footer>
-  </main>
+    </div>
+  </div>
+
+</div><!--container//-->
+
 </body>
 
 </html>
