layout: case study layout created

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/main.css">
+  <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
   <link rel="stylesheet" href="./assets/css/tailwind-output.css">
 
   <!-- <link rel="stylesheet" href="https://tailwindcss.com/assets/build/css/main.css?id=e994f5f9525b4219e81f"> -->
@@ -21,25 +21,83 @@
 
 <body>
 
-<div class="container mx-auto px-4">
+<div class="bg-red-500 pb-40">
+  <div class="container mx-auto px-4">
+    <header class="flex flex-col sm:flex-row items-center justify-between py-6 relative">
+      <h3 class="text-2xl font-bold uppercase text-blue-900">Mike Kivikoski</h3>
+    </header>
 
-  <header class="flex flex-col sm:flex-row items-center justify-between py-6 relative">
-    <h3 class="text-2xl font-bold uppercase text-blue-900">Mike Kivikoski</h3>
-  </header>
+    <div class="flex mb-4">
+      <div class="w-full bg-gray-500 ">
+        Hi, I&rsquo;m Mike Kivikoski.
+      </div>
+    </div>
 
-  <div class="flex mb-4">
-    <div class="w-full bg-gray-500 ">
-      Hi, I&rsquo;m Mike Kivikoski.
+    <div class="flex mb-4 ">
+      <div class="w-3/4">
+        <h2 class="text-6xl font-black">A Product Designer focusing on easy to use, device agnostic, and accessible experiences.</h2>
+      </div>
+      <div class="w-1/4"></div>
+    </div>
+  </div>
+</div>
+
+<div class="container mx-auto -my-40 px-4">
+
+  <div class="flex mb-4 bg-gray-300 p-4 rounded shadow-lg">
+    <div class="w-1/3 ml-auto bg-gray-400">
+      <img src="case-study/ezcater/images/ezcater-001.jpg" alt="" id="ezcater-image-001" />
+    </div>
+    <div class="w-2/3 ml-auto bg-gray-500 ">
+      <h3>Headline about the project</h3>
+      <h4>Sub text about the project</h4>
+      <p>Leading text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Learn more about {{Case study}}</a>
     </div>
   </div>
 
-  <div class="flex mb-4">
-    <div class="w-3/4 bg-gray-500 ">
-      A Product Designer and Developer
-      focusing on easy to use, device agnostic, and accessible experiences.
+  <div class="px-2">
+    <div class="flex -mx-4">
+      <div class="w-1/3 px-2 mb-4">
+        <div class="ml-auto rounded-t">
+          <img src="case-study/ezcater/images/ezcater-001.jpg" alt="" class="rounded-t" />
+        </div>
+        <div class="ml-auto bg-gray-500 p-4 rounded-b">
+          <h3>Headline about the project</h3>
+          <h4>Sub text about the project</h4>
+          <p>Leading text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Learn more about {{Case study}}</a>
+        </div>
+      </div>
+
+      <div class="w-1/3 px-2 mb-4">
+        <div class="ml-auto rounded-t">
+          <img src="case-study/ezcater/images/ezcater-001.jpg" alt="" class="rounded-t" />
+        </div>
+        <div class="ml-auto bg-gray-500 p-4 rounded-b">
+          <h3>Headline about the project</h3>
+          <h4>Sub text about the project</h4>
+          <p>Leading text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Learn more about {{Case study}}</a>
+        </div>
+      </div>
+
+      <div class="w-1/3 px-2 mb-4">
+        <div class="ml-auto rounded-t">
+          <img src="case-study/ezcater/images/ezcater-001.jpg" alt="" class="rounded-t" />
+        </div>
+        <div class="ml-auto bg-gray-500 p-4 rounded-b">
+          <h3>Headline about the project</h3>
+          <h4>Sub text about the project</h4>
+          <p>Leading text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Learn more about {{Case study}}</a>
+        </div>
+      </div>
     </div>
-    <div class="w-1/4 bg-gray-400 "></div>
   </div>
+
+
+
 
   <div class="flex mb-4">
     <div class="w-1/4 bg-gray-400 ">
